sas-core/main/default/objects/Group_Travel_Request__c/fields/Group_Travel_Request__c.object-meta.xml
<CustomObject>
    <label>Group Travel Request</label>
    <nameField>
        <label>Group Travel Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Group Travel Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>