sas-core/main/default/objects/Group_Travel_Request__c/fields/Alternate_Departure_date__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Departure_date__c</fullName>
    <label>Alternate Departure date</label>
    <type>Date</type>
</CustomField>