sas-core/main/default/objects/Group_Travel_Request__c/fields/Alternate_Return_date__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Return_date__c</fullName>
    <label>Alternate Return date</label>
    <type>Date</type>
</CustomField>