sas-core/main/default/objects/Group_Travel_Request__c/fields/Alternate_Return_time__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Return_Time__c</fullName>
    <label>Alternate Return Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Midmorning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>