sas-core/main/default/objects/Group_Travel_Request__c/fields/Alternative_Dates__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Dates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alternative Dates</label>
    <type>Checkbox</type>
</CustomField>