sas-core/main/default/objects/Group_Travel_Request__c/fields/C_o_Address__c.field-meta.xml
<CustomField>
    <fullName>C_o_Address__c</fullName>
    <label>C/o Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>