sas-core/main/default/objects/Group_Travel_Request__c/fields/Comments_From_Customer__c.field-meta.xml
<CustomField>
    <fullName>Comments_From_Customer__c</fullName>
    <label>Comments From Customer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>