sas-core/main/default/objects/Group_Travel_Request__c/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <label>Company Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>