sas-core/main/default/objects/Group_Travel_Request__c/fields/Departure_date__c.field-meta.xml
<CustomField>
    <fullName>Departure_date__c</fullName>
    <label>Departure date</label>
    <type>Date</type>
</CustomField>