sas-core/main/default/objects/Group_Travel_Request__c/fields/Different_Return_City_Airpor__c.field-meta.xml
<CustomField>
    <fullName>Different_Return_City_Airpor__c</fullName>
    <label>Different Return City Airpor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>