sas-core/main/default/objects/Group_Travel_Request__c/fields/Extra_Bags__c.field-meta.xml
<CustomField>
    <fullName>Extra_Bags__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extra Bags</label>
    <type>Checkbox</type>
</CustomField>