sas-core/main/default/objects/Group_Travel_Request__c/fields/Form_of_payment__c.field-meta.xml
<CustomField>
    <fullName>Form_of_payment__c</fullName>
    <label>Form of payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>SAS Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>