sas-core/main/default/objects/Group_Travel_Request__c/fields/From_Airport__c.field-meta.xml
<CustomField>
    <fullName>From_Airport__c</fullName>
    <label>From Airport</label>
    <length>100</length>
    <type>Text</type>
</CustomField>