sas-core/main/default/objects/Group_Travel_Request__c/fields/Group_Type__c.field-meta.xml
<CustomField>
    <fullName>Group_Type__c</fullName>
    <label>Group Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Youth</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>