sas-core/main/default/objects/Group_Travel_Request__c/fields/have_company_Code__c.field-meta.xml
<CustomField>
    <fullName>have_company_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>have company Code</label>
    <type>Checkbox</type>
</CustomField>