sas-core/main/default/objects/Group_Travel_Request__c/fields/Invoice_Agreement_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Agreement_Number__c</fullName>
    <label>Invoice Agreement Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>