sas-core/main/default/objects/Group_Travel_Request__c/fields/Invoice_agreement_with_SAS__c.field-meta.xml
<CustomField>
    <fullName>Invoice_agreement_with_SAS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice agreement with SAS</label>
    <type>Checkbox</type>
</CustomField>