sas-core/main/default/objects/Group_Travel_Request__c/fields/Number_Of_Adults__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Adults__c</fullName>
    <label>Number Of Adults</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>