sas-core/main/default/objects/Group_Travel_Request__c/fields/Number_of_Passengers__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Passengers__c</fullName>
    <formula>Number_Of_Adults__c +  Number_Of_Children__c + Number_Of_Youths__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total number of adults, youth and children. Infants are excluded</inlineHelpText>
    <label>Number Of Passengers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>