sas-core/main/default/objects/Group_Travel_Request__c/fields/Number_Of_Special_Assistance_Travellers__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Special_Assistance_Travellers__c</fullName>
    <label>Number Of Special Assistance Travellers</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>