sas-core/main/default/objects/Group_Travel_Request__c/fields/Other_destinations_of_interest__c.field-meta.xml
<CustomField>
    <fullName>Other_destinations_of_interest__c</fullName>
    <label>Other destinations of interest</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>