sas-core/main/default/objects/Group_Travel_Request__c/fields/Propose_alternative_destinations__c.field-meta.xml
<CustomField>
    <fullName>Propose_alternative_destinations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Propose alternative destinations</label>
    <type>Checkbox</type>
</CustomField>