sas-core/main/default/objects/Group_Travel_Request__c/fields/Special_Baggage__c.field-meta.xml
<CustomField>
    <fullName>Special_Baggage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Baggage</label>
    <type>Checkbox</type>
</CustomField>