sas-core/main/default/objects/Group_Travel_Request__c/fields/Special_Baggage_Note__c.field-meta.xml
<CustomField>
    <fullName>Special_Baggage_Note__c</fullName>
    <label>Special Baggage Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>