sas-core/main/default/objects/Group_Travel_Request__c/fields/To_Airport__c.field-meta.xml
<CustomField>
    <fullName>To_Airport__c</fullName>
    <label>To Airport</label>
    <length>100</length>
    <type>Text</type>
</CustomField>