sas-core/main/default/objects/Group_Travel_Request__c/fields/Travel_Class__c.field-meta.xml
<CustomField>
    <fullName>Travel_Class__c</fullName>
    <label>Travel Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAS Go</fullName>
            </value>
            <value>
                <fullName>SAS Plus</fullName>
            </value>
            <value>
                <fullName>SAS Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>