sas-core/main/default/objects/Group_Travel_Request__c/fields/Trip_Type__c.field-meta.xml
<CustomField>
    <fullName>Trip_Type__c</fullName>
    <label>Trip Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One way</fullName>
            </value>
            <value>
                <fullName>Round Trip</fullName>
            </value>
            <value>
                <fullName>Return From Another City</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>