sas-core/main/default/objects/Group_Travel_Request__c/fields/Visual_or_hearing_assistance__c.field-meta.xml
<CustomField>
    <fullName>Visual_or_hearing_assistance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visual or hearing assistance</label>
    <type>Checkbox</type>
</CustomField>