sas-core/main/default/objects/Group_Travel_Request__c/fields/Wheelchairs__c.field-meta.xml
<CustomField>
    <fullName>Wheelchairs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wheelchairs</label>
    <type>Checkbox</type>
</CustomField>